--- a/serverless.yaml
+++ b/serverless.yaml
@@ -41,7 +41,9 @@ provider:
       # the specific table for the stage
       Resource:
         - "Fn::GetAtt": [ GeoTable, Arn ]
-
+        - { "Fn::Join": [ "/", [ 
+          { "Fn::GetAtt": ["GeoTable", "Arn" ] }, "index", "geohash-index" 
+          ]]}
 functions:
   # Defines an HTTP API endpoint that calls the main function in find.js
   # - path: url path is /find
@@ -55,9 +57,13 @@ functions:
           path: find
           method: post
           cors: true
+          authorizer: aws_iam          
 
 resources:
   # API Gateway Errors
   - ${file(resources/api-gateway-errors.yml)}
   # DynamoDB
-  - ${file(resources/dynamodb-table.yml)}          
+  - ${file(resources/dynamodb-table.yml)}
+  # Cognito
+  - ${file(resources/cognito-user-pool.yml)}
+  - ${file(resources/cognito-identity-pool.yml)}
