--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geospatial",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "dynamodb-geo": "^0.4.0",
     "express": "^4.16.4",
     "serverless-http": "^1.9.1",
+    "serverless-pseudo-parameters": "^2.5.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
